syntax = "proto3";

package pb;

import "user.proto";

option go_package = "github.com/abdulkarimogaji/go-chat/pb";

message CreateUserRequest {
  string username = 1;
  string fullname = 2;
  string email = 3;
  string password = 4;
}

message CreateUserResponse {
  User user = 1;
  string access_token = 2;
}
